--- a/data/pathfinder-bestiary/uCw15c4AnIrOy5AV.htm
+++ b/data/pathfinder-bestiary/uCw15c4AnIrOy5AV.htm
@@ -1,9 +1,8 @@
 Name: Merfolk Wavecaller
-Nom: Implorateur des vagues homme-poisson
-État: changé
-État d'origine: officielle
+Nom: Implorateur des vagues Homme-poisson
+État: officielle
 
 ------ Description (en) ------
 Merfolk wavecallers use their primal power to call forth allies and defend their people with deadly magic.<br /><br />
 ------ Description (fr) ------
-Les implorateurs des vagues hommes-poissons utilisent leur puissance primordiale pour appeler des alliés et défendre leur peuple à l’aide d’une redoutable magie.<br><br>
+Les implorateurs des vagues Hommes-poissons utilisent leur puissance primordiale pour appeler des alliés et défendre leur peuple à l’aide d’une redoutable magie.<br><br>
