--- a/data/pathfinder-bestiary/UrviURGu5o9LkhxN.htm
+++ b/data/pathfinder-bestiary/UrviURGu5o9LkhxN.htm
@@ -1,7 +1,6 @@
 Name: Sea Devil Brute
-Nom: Brute diable des mers
-État: changé
-État d'origine: officielle
+Nom: Brute Diable des mers
+État: officielle
 
 ------ Description (en) ------
 Physically imposing sea devils are equipped with some of the best weaponry the community can find, though most are happy to rend their foes using tooth and nail.<br /><br />
