--- a/data/pathfinder-bestiary/VC7rtYR4hLxwg7WZ.htm
+++ b/data/pathfinder-bestiary/VC7rtYR4hLxwg7WZ.htm
@@ -1,9 +1,8 @@
 Name: Ghast
 Nom: Blême
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Ghasts-feral, foul-smelling, and constantly hungry-are the more powerful kin of ghouls. They are relentless in the pursuit of their prey.<br /><br />
 ------ Description (fr) ------
-Les blêmes sauvages, puants et toujours affamés, sont les plus redoutables des goules. Ils se montrent implacables dans la poursuite de leurs proies.<br><br>
+Les Blêmes sauvages, puants et toujours affamés, sont les plus redoutables des goules. Ils se montrent implacables dans la poursuite de leurs proies.<br><br>
