--- a/data/pathfinder-bestiary/vxKqnzwcxNAgLp7C.htm
+++ b/data/pathfinder-bestiary/vxKqnzwcxNAgLp7C.htm
@@ -1,7 +1,6 @@
 Name: Giant Octopus
 Nom: Pieuvre géante
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Giant octopuses are found in the heart of deep, dark oceans.<br /><br />
