--- a/data/pathfinder-bestiary/wMomrpcaC8QvIdlj.htm
+++ b/data/pathfinder-bestiary/wMomrpcaC8QvIdlj.htm
@@ -1,7 +1,6 @@
 Name: Ankhrav
 Nom: Ankhrav
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 These horse-sized, burrowing monsters generally avoid heavily settled areas like
@@ -10,4 +9,4 @@ the creatures do not remain in the deep wilderness for long. Desperate farmers
 whose fields become infested by ankhravs often have little recourse but to seek
 the aid of adventurers.<br /><br />
 ------ Description (fr) ------
-Ces monstres fouisseurs de la taille d’un cheval évitent généralement les zones fortement peuplées comme les cités mais leur prédilection pour le bétail et la chair humanoïde les pousse à ne pas rester trop longtemps dans les régions reculées. Les fermiers désespérés dont les champs sont infestés d’ankhravs n’ont généralement pas d’autre choix que de demander l’aide des aventuriers.<br><br>
+Ces monstres fouisseurs de la taille d’un cheval évitent généralement les zones fortement peuplées comme les cités mais leur prédilection pour le bétail et la chair humanoïde les pousse à ne pas rester trop longtemps dans les régions reculées. Les fermiers désespérés dont les champs sont infestés d’Ankhravs n’ont généralement pas d’autre choix que de demander l’aide des aventuriers.<br><br>
