--- a/data/pathfinder-bestiary/wpmvdP5w936Kmq0e.htm
+++ b/data/pathfinder-bestiary/wpmvdP5w936Kmq0e.htm
@@ -1,9 +1,8 @@
 Name: Pixie
 Nom: Pixie
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Insatiably curious, overly excitable, and just a bit puckish, pixies are wanderers and tricksters who use their pixie dust to create all sorts of whimsical situations, as well as to defend themselves. Other creatures often have trouble understanding a pixie's rapid, rambling way of speaking.<br /><br />
 ------ Description (fr) ------
-D’une curiosité insatiable, toujours surexcités et juste un peu taquins, les pixies sont des voyageurs et des farceurs qui utilisent leur poussière magique aussi bien pour créer toutes sortes de situations saugrenues que pour se défendre. Les autres créatures éprouvent souvent des difficultés à comprendre un pixie dont le débit de paroles est rapide et décousu.<br><br>
+D’une curiosité insatiable, toujours surexcités et juste un peu taquins, les Pixies sont des voyageurs et des farceurs qui utilisent leur poussière magique aussi bien pour créer toutes sortes de situations saugrenues que pour se défendre. Les autres créatures éprouvent souvent des difficultés à comprendre un Pixie dont le débit de paroles est rapide et décousu.<br><br>
