--- a/data/pathfinder-bestiary/XoXf5ExS95Vv6lNf.htm
+++ b/data/pathfinder-bestiary/XoXf5ExS95Vv6lNf.htm
@@ -1,9 +1,8 @@
 Name: Elemental Avalanche
 Nom: Avalanche élémentaire
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Stubborn and ponderous, elemental avalanches are massive beings of living rock and dirt.<br /><br />
 ------ Description (fr) ------
-Bornées et maladroites, les avalanches élémentaires sont des êtres massifs constitués de roches et de terre vivantes.<br><br>
+Bornées et maladroites, les Avalanches élémentaires sont des êtres massifs constitués de roches et de terre vivantes.<br><br>
