--- a/data/pathfinder-bestiary/xYlOudjXyTakF1m8.htm
+++ b/data/pathfinder-bestiary/xYlOudjXyTakF1m8.htm
@@ -1,9 +1,8 @@
 Name: Living Landslide
 Nom: Glissement de terrain vivant
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Living landslides resemble humanoids made of earth and gravel.<br /><br />
 ------ Description (fr) ------
-Les glissements de terrain vivants ressemblent à des humanoïdes constitués de terre et de cailloux.<br><br>
+Les Glissements de terrain vivants ressemblent à des humanoïdes constitués de terre et de cailloux.<br><br>
