--- a/data/pathfinder-bestiary/zJZqpx6pPW7dxEUV.htm
+++ b/data/pathfinder-bestiary/zJZqpx6pPW7dxEUV.htm
@@ -1,7 +1,6 @@
 Name: Giant Scorpion
 Nom: Scorpion géant
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 These massive, terrifying arachnids are typically 8 feet long from head to the base of the tail. Giant scorpions are the favored pack animals and war beasts of various desert-dwelling monsters, particularly gnolls. They are most commonly encountered in the wild, however. There they lair in mountainside caves or burrow beneath shallow layers of sand where they lie in wait for prey to wander near. Sleek, pallid subterranean scorpions also exist, as do still larger species.<br /><br />
