--- a/data/pathfinder-bestiary-2/r3yLNfqS00g8sdrT.htm
+++ b/data/pathfinder-bestiary-2/r3yLNfqS00g8sdrT.htm
@@ -1,8 +1,8 @@
 Name: Duneshaker Solifugid
-Nom: 
-État: auto-trad
+Nom: Tremble-Dune Solifuges
+État: libre
 
 ------ Description (en) ------
 The largest solifugids, duneshakers, are so immense that their movements make the terrain around them tremble. They can prey on creatures the size of mammoths or even larger.<br /><br />
 ------ Description (fr) ------
-Les plus grands solifuges, les duneshakers, sont si immenses que leurs mouvements font trembler le terrain autour d'eux. Ils peuvent s'attaquer à des créatures de la taille d'un mammouth, voire plus grandes encore ;
+Les plus grands Solifuges, les Tremble-Dune, sont si immenses que leurs mouvements font trembler le terrain autour d'eux. Ils peuvent s'attaquer à des créatures de la taille d'un mammouth, voire plus grandes encore ;
