--- a/data/pathfinder-bestiary-2/r9L6tdT44kYeN1FV.htm
+++ b/data/pathfinder-bestiary-2/r9L6tdT44kYeN1FV.htm
@@ -1,8 +1,8 @@
 Name: Giant Chameleon
-Nom: 
+Nom: Caméléon géant
 État: auto-trad
 
 ------ Description (en) ------
 Giant chameleons are legendary for their ability to change their skin color in response to their surroundings. Their eyes are capable of peering in different directions independently, making them almost as difficult to sneak up on as they are to notice in the first place.<br /><br />
 ------ Description (fr) ------
-Les caméléons géants sont légendaires pour leur capacité à changer la couleur de leur peau en fonction de leur environnement. Leurs yeux sont capables de regarder dans différentes directions indépendamment, ce qui les rend presque aussi difficiles à surprendre qu'à remarquer en premier lieu ;
+Les caméléons géants sont légendaires pour leur capacité à changer la couleur de leur peau en fonction de leur environnement. Leurs yeux sont capables de regarder dans différentes directions indépendamment, ce qui les rend presque aussi difficiles à surprendre qu'à remarquer en premier lieu.
