--- a/data/pathfinder-bestiary-2/RknMXlwJcbvGhk3n.htm
+++ b/data/pathfinder-bestiary-2/RknMXlwJcbvGhk3n.htm
@@ -1,8 +1,9 @@
 Name: Reef Octopus
-Nom: 
-État: auto-trad
+Nom: Pieuvre
+État: libre
+
 
 ------ Description (en) ------
 The common reef octopus is a risky but valuable catch for coastal fishers.<br /><br />
 ------ Description (fr) ------
-La pieuvre commune de récif est une prise risquée mais précieuse pour les pêcheurs côtiers.<br /><br />
+La pieuvre commune de récif est une prise risquée, mais précieuse pour les pêcheurs côtiers.<br /><br />
