--- a/data/pathfinder-bestiary-2/RqABskvexmp5sT7X.htm
+++ b/data/pathfinder-bestiary-2/RqABskvexmp5sT7X.htm
@@ -1,6 +1,6 @@
 Name: Giant Cockroach
-Nom: 
-État: auto-trad
+Nom: Cafard géant
+État: libre
 
 ------ Description (en) ------
 Cockroaches are communal creatures, rarely setting out on their own unless they are searching for food. If an adventurer encounters a single giant cockroach while exploring, they had best take precautions against others, as there is likely an entire colony nearby.<br /><br />
