--- a/data/pathfinder-bestiary-2/RUdP7qWg6pnKrPnh.htm
+++ b/data/pathfinder-bestiary-2/RUdP7qWg6pnKrPnh.htm
@@ -1,6 +1,6 @@
 Name: Striding Fire
-Nom: 
-État: auto-trad
+Nom: Morte Feu
+État: libre
 
 ------ Description (en) ------
 An embodiment of the speed and chaos of a spreading blaze, a striding fire appears as a lithe and long-limbed humanoid composed of shifting-hued flames churning within a skeleton-like framework.<br /><br />
