--- a/data/pathfinder-bestiary-2/s0wn50S5mGxagSAa.htm
+++ b/data/pathfinder-bestiary-2/s0wn50S5mGxagSAa.htm
@@ -1,8 +1,8 @@
 Name: Zyss Serpentfolk
-Nom: 
-État: auto-trad
+Nom: Homme-serpent Zyss
+État: libre
 
 ------ Description (en) ------
 Even the least among zyss serpentfolk consider themselves greater than any mammal. Their magical abilities, most notably their telepathy, are all the reason they need to hold this view. And it's true enough that the instinctual skill and magic of any zyss is enough to best the average human.<br /><br />
 ------ Description (fr) ------
-Même les serpentfolk zyss les plus modestes se considèrent plus grands que n'importe quel mammifère. Leurs capacités magiques, en particulier leur télépathie, sont la seule raison qui leur permet d'avoir cette opinion. Et c’est assez vrai que l’habileté instinctive et la magie de n’importe quel zyss sont suffisantes pour battre l’humain moyen.<br /><br />
+Même les Homme-serpent Zyss les plus modestes se considèrent plus grands que n'importe quel mammifère. Leurs capacités magiques, en particulier leur télépathie, sont la seule raison qui leur permet d'avoir cette opinion. Et c’est assez vrai que l’habileté instinctive et la magie de n’importe quel Zyss sont suffisantes pour battre l’humain moyen.<br /><br />
