--- a/data/feats/ancestry-09-cCv9pgyXzZ0TQmZg.htm
+++ b/data/feats/ancestry-09-cCv9pgyXzZ0TQmZg.htm
@@ -6,9 +6,10 @@ PrereqFR: Abajoues
 
 ------ Benefits and spoiler ----
 Benefits: Your cheek pouches are especially stretchy.
-Avantage: Vos poches à joues sont particulièrement extensibles.
+Avantage: Vos abajoues peuvent contenir des objets plus encombrants.
 
 ------ Description (en) ------
 <p>Your cheek pouches are especially stretchy. Instead of storing up to four items of Light Bulk in your cheek pouches, you can store up to 1 Bulk worth of items. The maximum size of a given item is unchanged.</p>
 ------ Description (fr) ------
-<p>Vos abajoues sont particulièrement élastiques. Au lieu d'y emmagasiner jusqu'à quatre objet d'Encombrement léger, vous pouvez y placer des objets atteignant 1 Encombrement. La taille maximale de chaque objet donné reste inchangée.</p>
+<p>Vos abajoues sont particulièrement élastiques.</p>
+<p>Au lieu d'y emmagasiner jusqu'à quatre objet d'Encombrement léger, vous pouvez y placer des objets atteignant 1 Encombrement. La taille maximale de chaque objet donné reste inchangée.</p>
