--- a/data/feats/ancestry-09-chM3Pya6H8QGnEGo.htm
+++ b/data/feats/ancestry-09-chM3Pya6H8QGnEGo.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You glide through the water with graceful ease.
-Avantage: Vous glissez sur l'eau avec une aisance gracieuse.
+Avantage: Dans l'eau ou les marécages, vous ignorez les effets des terrains difficiles non magiques.
 
 ------ Description (en) ------
 <p>You glide through the water with graceful ease. When in an aquatic or swamp environment, you ignore the effects of non-magical difficult terrain. In addition, swimming up or down isn’t difficult terrain for you.</p>
 ------ Description (fr) ------
-<p>Vous glissez au travers de l'eau avec une facilité gracieuse. Lorsque vous êtes dans un environnement aquatique ou marécageux, vous ignorez les effets des terrains difficiles non magiques. De plus, nager vers le haut ou vers le bas n'est pas un terrain difficile pour vous.</p>
+<p>Vous glissez sur l'eau avec une aisance gracieuse.</p>
+<p>Lorsque vous êtes dans un environnement aquatique ou marécageux, vous ignorez les effets des terrains difficiles non magiques. De plus, nager vers le haut ou vers le bas n'est pas un terrain difficile pour vous.</p>
