--- a/data/pathfinder-bestiary-2/uBG93M52pa84qIt5.htm
+++ b/data/pathfinder-bestiary-2/uBG93M52pa84qIt5.htm
@@ -1,8 +1,8 @@
 Name: Giant Mosquito
-Nom: 
-État: auto-trad
+Nom: Moustique géant
+État: libre
 
 ------ Description (en) ------
 These horrifically enlarged versions of the common mosquito often prey upon megafauna like dinosaurs and other large creatures, but they won't turn down a chance to drink the blood of a smaller target-such as a humanoid.<br /><br />
 ------ Description (fr) ------
-Ces versions horriblement agrandies du moustique commun s'attaquent souvent à des mégafaunes comme les dinosaures et d'autres grandes créatures, mais elles ne refusent pas l'occasion de boire le sang d'une cible plus petite, comme un humanoïde ;
+Ces versions horriblement agrandies du moustique commun, s'attaquent souvent à des mégafaunes comme les dinosaures et d'autres grandes créatures, mais elles ne refusent pas l'occasion de boire le sang d'une cible plus petite, comme un humanoïde.
