--- a/data/pathfinder-bestiary-2/UcUlBj3brC80A8gq.htm
+++ b/data/pathfinder-bestiary-2/UcUlBj3brC80A8gq.htm
@@ -1,8 +1,8 @@
 Name: Snapping Turtle
-Nom: 
-État: auto-trad
+Nom: Tortue happante
+État: libre
 
 ------ Description (en) ------
 Snapping turtles are freshwater reptiles with a long flexible neck, a sharp piercing beak, and a confrontational temperament that doesn't prevent some spellcasters from choosing these creatures as familiars. They weigh about 20 pounds and have shells around 18 inches in length.<br /><br />
 ------ Description (fr) ------
-Les tortues serpentines sont des reptiles d'eau douce dotés d'un long cou flexible, d'un bec perçant et d'un tempérament conflictuel, ce qui n'empêche pas certains lanceurs de sorts de choisir ces créatures comme familiers. Elles pèsent environ 20 livres et ont une carapace d'environ 18 pouces de long.<br /><br />
+Les tortues happantes sont des reptiles d'eau douce dotés d'un long cou flexible, d'un bec perçant et d'un tempérament agressif, ce qui n'empêche pas certains lanceurs de sorts de choisir ces créatures comme familiers. Elles pèsent jusqu'à 9 kilos et ont une carapace d'environ 45 centimètres de long.<br /><br />
