--- a/data/pathfinder-bestiary-2/URYQ5goPCmrQvJf5.htm
+++ b/data/pathfinder-bestiary-2/URYQ5goPCmrQvJf5.htm
@@ -1,6 +1,6 @@
 Name: Giant Ant
-Nom: 
-État: auto-trad
+Nom: Fourmi géante
+État: libre
 
 ------ Description (en) ------
 Giant ants are much like their smaller kin in their industrious habits, though growing to the size of ponies makes them much deadlier.<br /><br />
