--- a/data/pathfinder-bestiary-2/veyyE0brfjIoQK1q.htm
+++ b/data/pathfinder-bestiary-2/veyyE0brfjIoQK1q.htm
@@ -1,8 +1,7 @@
 Name: Icicle Snake
-Nom: 
-État: auto-trad
-
+Nom: Serpent glacé
+État: libre
 ------ Description (en) ------
 Translucent and capable of hanging suspended and near motionless, icicle snakes sense the heat of living creatures as a threat and attempt to use their camouflage and chilling bite against foes.<br /><br />
 ------ Description (fr) ------
-Translucides et capables de rester suspendus et presque immobiles, les serpents glaçons ressentent la chaleur des créatures vivantes comme une menace et tentent d'utiliser leur camouflage et leur morsure glaçante contre leurs ennemis.<br /><br />
+Translucides et capables de rester suspendus et presque immobiles, les serpents glacés ressentent la chaleur des créatures vivantes comme une menace et tentent d'utiliser leur camouflage et leur morsure glaçante contre leurs ennemis.<br /><br />
