--- a/data/pathfinder-bestiary-2/vjEHKCgMunMHKl7r.htm
+++ b/data/pathfinder-bestiary-2/vjEHKCgMunMHKl7r.htm
@@ -1,8 +1,8 @@
 Name: Wereboar
-Nom: 
-État: auto-trad
+Nom: Sanglier-garou
+État: libre
 
 ------ Description (en) ------
 Wereboars tend to be aggressive and stubborn, and often live with their own kind in small, remote communities. Even when they're inclined to interact with others, wereboars' short tempers and hostile nature lead other creatures to avoid them. Lone wereboars who settle down-often on remote farms-are extremely territorial, though others are content to roam and explore lands far from home. Their other habits also vary widely from individual to individual, right down to diet: some wereboars might feast on human flesh, while others are mostly vegetarian.<br /><br />
 ------ Description (fr) ------
-Les sangliers-garous ont tendance à être agressifs et têtus, et vivent souvent avec leurs semblables dans de petites communautés isolées. Même lorsqu’ils sont enclins à interagir avec d’autres, leur tempérament court et leur nature hostile incitent les autres créatures à les éviter. Les sangliers-garous solitaires qui s'installent - souvent dans des fermes éloignées - sont extrêmement territoriaux, bien que d'autres se contentent d'errer et d'explorer les terres loin de chez eux. Leurs autres habitudes varient également beaucoup d'un individu à l'autre, jusqu'à leur régime alimentaire : certains sangliers-garous peuvent se régaler de chair humaine, tandis que d'autres sont surtout végétariens.<br /><br />
+Les Sangliers-garous ont tendance à être agressifs et têtus, et vivent souvent avec leurs semblables dans de petites communautés isolées. Même lorsqu’ils sont enclins à interagir avec d’autres, leur tempérament irrascible et leur nature hostile incitent les autres créatures à les éviter. Les Sangliers-garous solitaires qui s'installent - souvent dans des fermes éloignées - sont extrêmement territoriaux. D'autres se contentent d'errer et d'explorer les terres loin de chez eux. Leurs autres habitudes varient également beaucoup d'un individu à l'autre, jusqu'à leur régime alimentaire : certains Sangliers-garous peuvent se régaler de chair humaine, tandis que d'autres sont surtout végétariens.<br /><br />
