--- a/data/pathfinder-bestiary-2/WjZCNuHNKfeeHCQS.htm
+++ b/data/pathfinder-bestiary-2/WjZCNuHNKfeeHCQS.htm
@@ -1,8 +1,7 @@
 Name: Worm That Walks Cultist
-Nom: 
-État: auto-trad
-
+Nom: Cultiste Ver-qui-marche
+État: libre
 ------ Description (en) ------
 This worm that walks was a cultist of the Great Old One Hastur in its prior life. It continues its conspiracies and strives to further its evil plots in its new life.<br /><br />
 ------ Description (fr) ------
-Ce ver qui marche était un adepte du Grand Ancien Hastur dans sa vie antérieure. Il continue ses conspirations et s'efforce de faire avancer ses complots maléfiques dans sa nouvelle vie.<br /><br />
+Ce Ver-qui-marche était un adepte du Grand Ancien Hastur dans sa vie antérieure. Il continue ses conspirations et s'efforce de faire avancer ses complots maléfiques dans sa nouvelle vie.<br /><br />
