--- a/data/classfeatures/rogue-01-wAh2riuFRzz0edPl.htm
+++ b/data/classfeatures/rogue-01-wAh2riuFRzz0edPl.htm
@@ -1,13 +1,12 @@
 Name: Thief Racket
 Nom: Trafic de roublard : Voleur
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Nothing beats the thrill of taking something that belongs to someone else, especially if you can do so completely unnoticed. You might be a pickpocket working the streets, a cat burglar sneaking through windows and escaping via rooftops, or a safecracker breaking into carefully guarded vaults. You might even work as a consultant, testing clients' defenses by trying to steal something precious.<br /></p>
 <p>When a fight breaks out, you prefer swift, lightweight weapons, and you strike where it hurts. When you attack with a finesse melee weapon, you can add your Dexterity modifier to damage rolls instead of your Strength modifier.<br /></p>
 <p>You are trained in Thievery.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Rien n’égale le frisson que vous ressentez quand vous dérobez quelque chose qui ne vous appartient pas, surtout si personne ne vous remarque. Vous êtes peut-être un voleur à la tire qui officie dans les rues, un monte-en-l’air qui s’introduit chez les gens par les fenêtres et s’enfuit par les toits, ou un perceur de coffre dont la spécialité consiste à s’introduire dans des chambres fortes lourdement gardées. Vous pouvez également faire office de consultant et tester les mesures de sécurité de vos clients en leur dérobant des objets précieux.<br></span></p>
-<p><span id="ctl00_MainContent_DetailedOutput"> Quand un combat éclate, vous préférez utiliser des armes rapides et légères et frapper les points faibles de vos ennemis. Quand vous attaquez à l’aide d’une arme de corps à corps de finesse, vous pouvez ajouter votre modificateur de Dextérité à votre jet de dégâts au lieu de votre modificateur de Force.<br></span></p>
-<p><span id="ctl00_MainContent_DetailedOutput"> Vous êtes qualifié en Vol.&nbsp;</span></p>
+<p>Rien n’égale le frisson que vous ressentez quand vous dérobez quelque chose qui ne vous appartient pas, surtout si personne ne vous remarque. Vous êtes peut-être un voleur à la tire qui officie dans les rues, un monte-en-l’air qui s’introduit chez les gens par les fenêtres et s’enfuit par les toits, ou un perceur de coffre dont la spécialité consiste à s’introduire dans des chambres fortes lourdement gardées. Vous pouvez également faire office de consultant et tester les mesures de sécurité de vos clients en leur dérobant des objets précieux.</p>
+<p>Quand un combat éclate, vous préférez utiliser des armes rapides et légères et frapper les points faibles de vos ennemis. Quand vous attaquez à l’aide d’une arme de corps à corps de finesse, vous pouvez ajouter votre modificateur de Dextérité à votre jet de dégâts au lieu de votre modificateur de Force.</p>
+<p>Vous êtes qualifié en Vol.</p>
