--- a/data/pathfinder-bestiary-2/wrzlJufGEfMg5kVE.htm
+++ b/data/pathfinder-bestiary-2/wrzlJufGEfMg5kVE.htm
@@ -1,8 +1,8 @@
 Name: Raven Swarm
-Nom: 
-État: auto-trad
+Nom: Nuée de corbeaux
+État: libre
 
 ------ Description (en) ------
 A flock of ravens is known as an unkindness. Certainly the name lives up to its meaning when a swarm of ravens decides to work together. In most cases, a raven swarm like the one presented here won't attack larger foes, but when manipulated by supernatural forces or simple desperation born from hunger, an unkindness of ravens can be a surprisingly dangerous foe.<br /><br />
 ------ Description (fr) ------
-Une nuée de corbeaux est connue pour son manque de gentillesse. Le nom est certainement à la hauteur de sa signification lorsqu'un essaim de corbeaux décide de travailler ensemble. Dans la plupart des cas, un essaim de corbeaux comme celui présenté ici ne s'attaquera pas à des ennemis plus importants, mais lorsqu'il est manipulé par des forces surnaturelles ou par le simple désespoir né de la faim, un essaim de corbeaux peut être un ennemi étonnamment dangereux.<br /><br />
+Une Nuée de corbeaux est connue pour son manque de gentillesse. Le nom est certainement à la hauteur de sa signification lorsqu'une nuée de corbeaux décide de travailler ensemble. Dans la plupart des cas, une nuée de corbeaux comme celui présenté ici ne s'attaquera pas à des ennemis plus importants, mais lorsqu'il est manipulé par des forces surnaturelles ou par le simple désespoir né de la faim, une nuée de corbeaux peut être un ennemi étonnamment dangereux.<br /><br />
