--- a/data/pathfinder-bestiary-2/WxSpfUReYJb4StxG.htm
+++ b/data/pathfinder-bestiary-2/WxSpfUReYJb4StxG.htm
@@ -1,8 +1,8 @@
 Name: Blue-Ringed Octopus
-Nom: 
-État: auto-trad
+Nom: Pieuvre Anneaux-Bleus
+État: libre
 
 ------ Description (en) ------
 While relatively small, the blue-ringed octopus is particularly venomous for its size.<br /><br />
 ------ Description (fr) ------
-Bien que relativement petite, la pieuvre à anneaux bleus est particulièrement venimeuse pour sa taille<br /><br />
+Bien que relativement petite, la pieuvre Anneaux-Bleus est particulièrement venimeuse pour sa taille<br /><br />
