--- a/data/equipment/consumable-01-EWujUs3YmlBu2jhm.htm
+++ b/data/equipment/consumable-01-EWujUs3YmlBu2jhm.htm
@@ -1,7 +1,6 @@
 Name: Shielding Salve
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Onguent de bouclier
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
@@ -9,7 +8,7 @@ Nom:
 <p>The first time a physical attack or a magic missile hits the target during that round, the oil prevents 5 damage from that attack or spell, and then the oil's effect ends.</p>
 <p>@Compendium[pf2e.consumable-effects.16tOZk4qy329s2aK]{Effect: Shielding Salve}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
-<p>Cette pâte chatoyante possède de nombreuses propriétés d'un <em>bouclier </em>sort. Lorsque vous l'étalez sur une créature ou un objet, la cible bénéficie d'un bonus de circonstances de +1 à la CA pendant 1 round.</p>
-<p>La première fois qu'une attaque physique ou un missile magique touche la cible pendant ce round, l'huile empêche 5 dégâts de cette attaque ou de ce sort, puis l'effet de l'huile's'arrête.</p>
-<p>@Compendium[pf2e.consumable-effects.16tOZk4qy329s2aK]{Effet : Pommade de Bouclier}</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
+<p>Cette pâte chatoyante possède de nombreuses propriétés d'un sort de Bouclier. Lorsque vous l'étalez sur une créature ou un objet, la cible bénéficie d'un bonus de circonstances de +1 à la CA pendant 1 round.</p>
+<p>La première fois qu'une attaque physique ou un missile magique touche la cible pendant ce round, l'onguent empêche 5 points de dégâts de cette attaque ou de ce sort, annulant l'effet de l'onguent.</p>
+<p>@Compendium[pf2e.consumable-effects.16tOZk4qy329s2aK]{Effet: Onguent de Bouclier}</p>
