--- a/data/equipment/consumable-12-RhOx5wenvlljzOku.htm
+++ b/data/equipment/consumable-12-RhOx5wenvlljzOku.htm
@@ -1,7 +1,6 @@
 Name: Oil of Unlife (Greater)
-Nom: Huile de Non-vie (supérieur)
-État: changé
-État d'origine: auto-trad
+Nom: Huile de Non-vie (supérieure)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
