--- a/data/equipment/consumable-01-H2BqcfujumZVWF69.htm
+++ b/data/equipment/consumable-01-H2BqcfujumZVWF69.htm
@@ -1,7 +1,6 @@
 Name: Slippery Ribbon
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Ruban glissant
+État: libre
 
 ------ Description (en) ------
 <p><strong>Usage</strong> affixed to armor</p>
@@ -11,9 +10,9 @@ Nom:
 <hr />
 <p>This ribbon is constantly greasy to the touch and stains the armor it's affixed to. When you activate the slippery ribbon, your Speed increases by an amount necessary for you to move all the way through the enemy's space.</p>
 ------ Description (fr) ------
-<p><strong>Usage</strong> apposé sur une armure</p>
-<p><strong>Activation</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">F</span> envision</p>
-<p><strong>Trigger</strong> Vous réussissez un test d'Acrobatie à @Compendium[pf2e.actionspf2e.21WIfSu7Xd7uKqV8]{Tumble Through}, mais vous n'avez pas assez de Vitesse pour vous déplacer entièrement dans l'espace de l'ennemi;</p>
+<p><strong>Usage</strong> Fixé sur une armure</p>
+<p><strong>Activation</strong> <span class="pf2-icon">F</span> Imaginer</p>
+<p><strong>Déclenchement</strong> Vous réussissez un test d'Acrobatie à @Compendium[pf2e.actionspf2e.21WIfSu7Xd7uKqV8]{Déplacement acrobatique}, mais vous n'avez pas assez de Vitesse pour vous déplacer entièrement dans l'espace de l'ennemi;</p>
 <p><strong>Conditions requises</strong> Vous êtes un expert en Acrobatie.</p>
 <hr />
-<p>Ce ruban est constamment gras au toucher et tache l'armure sur laquelle il'est apposé. Lorsque vous activez le ruban glissant, votre Vitesse augmente d'un montant nécessaire pour que vous puissiez vous déplacer entièrement dans l'espace de l'ennemi.</p>
+<p>Ce ruban est constamment gras au toucher et tache l'armure sur laquelle il'est fixé. Lorsque vous activez le Ruban glissant, votre Vitesse augmente d'un montant nécessaire pour que vous puissiez vous déplacer entièrement dans l'espace de l'ennemi.</p>
