--- a/data/equipment/consumable-01-jTfacZ4SRuQd7Avh.htm
+++ b/data/equipment/consumable-01-jTfacZ4SRuQd7Avh.htm
@@ -1,11 +1,10 @@
 Name: Potion of Expeditious Retreat
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Potion de Retraite accélérée
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
 <p>The stopper for a <em>potion of expeditious retreat</em> is crafted to easily snap open in dire circumstances. When you drink this potion, you become <em>fleeing </em>for 1 minute, and you gain a +40-foot status bonus to all your Speeds for the duration as long as you are fleeing. You immediately Stride.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
-<p>Le bouchon d'une <em>potion de retraite rapide</em> est conçu pour s'ouvrir facilement dans des circonstances difficiles. Lorsque vous buvez cette potion, vous devenez <em>fuyant </em>pendant 1 minute, et vous gagnez un bonus d'état de +40 pieds à toutes vos Vitesses pour la durée tant que vous fuyez. Vous faites immédiatement de la foulée ;
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
+<p>Le bouchon d'une Potion de Retraite accélérée est conçu pour s'ouvrir facilement dans des circonstances difficiles. Lorsque vous buvez cette potion, vous êtes @Compendium[pf2e.conditionitems.sDPxOjQ9kx2RZE8D]{En fuite} pendant 1 minute, et vous gagnez un bonus d'état de 12 mètres à toutes vos Vitesses tant que vous fuyez. Immédiatement, vous accomplissez l'action @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marcher rapidement}.
