--- a/data/equipment/consumable-11-xVtyaEnYZ1aJT4ki.htm
+++ b/data/equipment/consumable-11-xVtyaEnYZ1aJT4ki.htm
@@ -1,7 +1,6 @@
 Name: Energy Mutagen (Greater)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Mutagène d'Énergie (supérieur)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -11,9 +10,9 @@ Nom:
 <p><strong>Drawback</strong> You gain weakness 5 to the other three energy types.</p>
 <p><strong>Duration</strong> 1 hour.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr />
 <p>Lorsqu'il est créé, ce mutagène est accordé à l'un des quatre types d'énergie suivants : acide, froid, électricité ou feu. Lorsqu'il est consommé, le mutagène imprègne votre corps d'une énergie qui se répand à chaque attaque. A des niveaux plus élevés, il peut même vous donner la capacité de libérer l'énergie en rafales contrôlées.</p>
-<p><strong>Avantage</strong> Vous gagnez une résistance de 15 au type d'énergie accordée. Chaque fois que vous obtenez une touche avec une arme de mêlée, ajoutez [[/r 1d6]] dégâts au type d'énergie accordé. De plus, vous pouvez mettre fin aux avantages de ce mutagène pour libérer un cône d'énergie de 30 pieds qui inflige [[/r 2d6]] de dégâts du type accordé pour chaque tranche complète de 10 minutes de durée restante (sauvegarde de base contre les réflexes de 25 DC).</p>
-<p><strong>Drawback</strong> Vous gagnez une faiblesse de 5 aux trois autres types d'énergie.</p>
+<p><strong>Avantage</strong> Vous gagnez une résistance de 15 au type d'énergie accordée. Chaque fois que vous touchez avec une arme de mêlée, ajoutez [[/r 1d6]] point de dégâts au type d'énergie accordé. En plus vous pouvez bénéficier de ce mutagène en provoquant un cône d'énergie de 9 mètres qui provoque [[/r 2d6]] points de dégâts tous les 10 minutes de la durée restante (DD 25 au jet de sauvegarde Réflexe) </p>
+<p><strong>Désavantage</strong> Vous gagnez une faiblesse de 5 aux trois autres types d'énergie.</p>
 <p><strong>Durée</strong> 1 heure.</p>
