--- a/data/equipment/consumable-17-34MbgwW1SGlowyk2.htm
+++ b/data/equipment/consumable-17-34MbgwW1SGlowyk2.htm
@@ -1,7 +1,6 @@
 Name: Energy Mutagen (Major)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Mutagène d'Énergie (majeure)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -13,7 +12,9 @@ Nom:
 ------ Description (fr) ------
 <p><strong>Activate</strong>  <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span>  Interact</p> 
 <hr /> 
-<p>Lorsqu'il est créé, ce mutagène est accordé à l'un des quatre types d'énergie suivants : acide, froid, électricité ou feu. Lorsqu'il est consommé, le mutagène imprègne votre corps d'une énergie qui se répand à chaque attaque. A des niveaux plus élevés, il peut même vous donner la capacité de libérer l'énergie en rafales contrôlées.</p> 
-<p><strong>Avantage</strong>  Vous gagnez une résistance de 20 au type d'énergie accordée. Chaque fois que vous obtenez une touche avec une arme de mêlée, ajoutez [[/r 2d6]] dégâts au type d'énergie accordé. De plus, vous pouvez mettre fin aux avantages de ce mutagène pour libérer un cône d'énergie de 30 pieds qui inflige [[/r 3d6]] de dégâts du type accordé pour chaque tranche complète de 10 minutes de durée restante (sauvegarde de base en Réflexes de 32).</p> 
-<p><strong>Drawback</strong>  Vous gagnez une faiblesse de 5 aux trois autres types d'énergie.</p> 
-<p><strong>Durée</strong>  1 heure.</p>
+<p><p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<hr />
+<p>Lorsqu'il est créé, ce mutagène est accordé à l'un des quatre types d'énergie suivants : acide, froid, électricité ou feu. Lorsqu'il est consommé, le mutagène imprègne votre corps d'une énergie qui se répand à chaque attaque. A des niveaux plus élevés, il peut même vous donner la capacité de libérer l'énergie en rafales contrôlées.</p>
+<p><strong>Avantage</strong> Vous gagnez une résistance de 20 au type d'énergie accordée. Chaque fois que vous touchez avec une arme de mêlée, ajoutez [[/r 2d6]] point de dégâts au type d'énergie accordé. En plus vous pouvez bénéficier de ce mutagène en provoquant un cône d'énergie de 9 mètres qui provoque [[/r 3d6]] points de dégâts tous les 10 minutes de la durée restante (DD 32 au jet de sauvegarde Réflexe) </p>
+<p><strong>Désavantage</strong> Vous gagnez une faiblesse de 5 aux trois autres types d'énergie.</p>
+<p><strong>Durée</strong> 1 heure.</p>
