--- a/data/equipment/consumable-01-ugIxgGIkJh2aXE2N.htm
+++ b/data/equipment/consumable-01-ugIxgGIkJh2aXE2N.htm
@@ -1,7 +1,6 @@
 Name: Potion of Fire Retaliation (Minor)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Potion de Riposte de feu (mineure)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
@@ -9,5 +8,5 @@ Nom:
 <p>The aura deals 1 fire damage.</p>
 ------ Description (fr) ------
 <p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
-<p>Pendant 1 minute après avoir bu une potion de représailles de feu, vous brillez d'une faible aura d'énergie de feu, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort à portée de toucher contre vous) subit des dégâts de feu.</p>
+<p>Pendant 1 minute après avoir bu une potion de Riposte de feu, vous brillez d'une faible aura d'énergie de feu, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort à portée de toucher contre vous) subit des dégâts de feu.</p>
 <p>L'aura inflige 1 dégât de feu.</p>
